--- a/aboutUs.html
+++ b/aboutUs.html
@@ -74,9 +74,9 @@ As a part of mini project, we have created this website. <br>
   </tr>
   <tr>
     <td>1</td>
-    <td>1888888</td>
-    <td>Kiran</td>
-    <td>sane@sample.com</td>
+    <td>1703021</td>
+    <td>Sanket Tambare</td>
+    <td>sanket.tambare01@gmail.com</td>
   </tr>
   <tr>
     <td>2</td>
