--- a/aboutUs.html
+++ b/aboutUs.html
@@ -35,7 +35,7 @@ tr:nth-child(even) {
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Home</a>
     <a href="bmwRules.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">BMW Rules</a>
-    <a href="assessBmw.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Assess BMW</a>
+    <a href="assessBmw.php" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Assess BMW</a>
     <a href="doAndDont.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Do&#39s and Don&#39ts</a>
     <a href="aboutUs.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-white">About Us</a>
   </div>
